kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: happa
  namespace: giantswarm
  labels:
    app: happa
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: happa
    spec:
      containers:
      - name: happa
        image: registry.giantswarm.io/giantswarm/happa:%%DOCKER_TAG%%
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 1
      imagePullSecrets:
      - name: circleci-giantswarm-registry
