kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: happa
  namespace: giantswarm
  labels:
    app: happa
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: happa
