kubernetes/production.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: happa
  namespace: giantswarm
  labels:
    app: happa
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: happa
    spec:
      volumes:
        - name: giantswarm-cert
          secret:
            secretName: giantswarm-cert
      containers:
      - name: happa
        image: registry.giantswarm.io/giantswarm/happa:%%DOCKER_TAG%%
        volumeMounts:
        - name: giantswarm-cert
          mountPath: /etc/nginx/certs
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 8000
            scheme: HTTPS
          initialDelaySeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8000
            scheme: HTTPS
          initialDelaySeconds: 10
          timeoutSeconds: 1
      imagePullSecrets:
      - name: circleci-giantswarm-registry

---

apiVersion: v1
kind: Service
metadata:
  name: happa
  namespace: giantswarm
  labels:
    app: happa
spec:
  type: NodePort
  ports:
  - port: 8000
  selector:
    app: happa

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: happa
  namespace: giantswarm
  labels:
    app: happa
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: happa-g8s.giantswarm.io
    http:
      paths:
      - backend:
          serviceName: happa
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - happa-g8s.giantswarm.io
